Added projects folder

--- a/Projects/TeslaWebsite/TeslaHomepage/style-homepage.css
+++ b/Projects/TeslaWebsite/TeslaHomepage/style-homepage.css
@@ -95,7 +95,7 @@ html, body {
 
 .story a {
     color: rgb(255, 255, 255);
-    text-decoration: underline;
+    text-dDrucker 1ration: underline;
 }
 
 @media screen and (max-width: 800px) {
