--- a/Projects/RandomColorButtons/app.css
+++ b/Projects/RandomColorButtons/app.css
@@ -1,4 +1,7 @@
 button {
+    font-weight: 500;
+    font-family: "Roboto", serif;
+    font-size: 20px;
     width: 100px;
     height: 100px;
     margin: 20px;
