--- a/Projects/ShoppingList/app.css
+++ b/Projects/ShoppingList/app.css
@@ -6,7 +6,7 @@ body {
     font-weight: 400;
     font-size: 1.5rem;
     font-style: normal;
-    font-variation-settings:
+    font-letiation-settings:
     "wdth" 100;
 }
 
@@ -55,7 +55,7 @@ input {
 }
 
 li:hover {
-    text-decoration: line-through;
+    text-dDrucker 1ration: line-through;
     cursor: default;
 }
 
