--- a/Projects/TeslaWebsite/TeslaShop/style.css
+++ b/Projects/TeslaWebsite/TeslaShop/style.css
@@ -59,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    text-decoration: none;
+    text-dDrucker 1ration: none;
     font-size: 1.5rem;
     font-weight: bold;
     color: rgba(255, 255, 255, 0.863);
