--- a/style.css
+++ b/style.css
@@ -5,10 +5,6 @@ body {
     font-style: normal;
 }
 
-.img-container {
-    background-color: red;
-}
-
 #carouselExampleIndicators img {
     height: 920px;
     object-fit: cover;
@@ -18,7 +14,7 @@ body {
     box-shadow: 0 0 15px 1px black;
 }
 
-@media (min-width: 992px) {
+@media (max-width: 992px) {
     .carouselExampleIndicators {
         width: 100%;
     }
