--- a/Projects/PhoneCostComparision/style.css
+++ b/Projects/PhoneCostComparision/style.css
@@ -1,8 +1,121 @@
 body {
     text-align: center;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    background-color: #A7C7E7;
 }
 
-div {
+h1 {
+    top: 0;
+    width: 100%;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+    color: black;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    margin: 20px 0;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+}
+
+label {
+    margin-bottom: 1rem;
+}
+
+input {
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+#input {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+#output {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 50%;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+    font-weight: bold;
+}
+
+button {
+    background-color: #1C2E4A;
+    color: white;
+    border-radius: 5px;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: padding .5s ease;
+    cursor: pointer;
+}
+
+button:hover {
+    padding: 0.5rem 4rem;
+    transition: padding .5s ease;
+}
+
+table {
+    border: 2px solid black;
+}
+
+td, th {
+    padding: 0.5rem;
+}
+
+@media (max-width: 1215px) {
+    main {
+        flex-direction: column;
+    }
+    #input {
+        margin-top: 8em;
+        width: 100%;
+    }
+    #output {
+        width: 100%;
+        margin-bottom: 5em;
+    }
+}
+
+@media (max-width: 712px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (max-width: 602px) {
+    h1 {
+        display: none;
+    }
 }
