--- a/Projects/PhoneCostComparision/style.css
+++ b/Projects/PhoneCostComparision/style.css
@@ -18,6 +18,8 @@ h1 {
     letter-spacing: 2px;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
     margin: 20px 0;
+    position: absolute;
+    display: inline-block;
 }
 
 main {
@@ -91,31 +93,39 @@ table {
 }
 
 td, th {
-    padding: 0.5rem;
+    padding: 0.3rem;
 }
 
-@media (max-width: 1215px) {
+@media (max-width: 1290px) {
     main {
         flex-direction: column;
+        height: 100%;
+        margin-top: 5em;
     }
     #input {
-        margin-top: 8em;
         width: 100%;
     }
     #output {
         width: 100%;
         margin-bottom: 5em;
     }
-}
-
-@media (max-width: 712px) {
     h1 {
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 }
 
-@media (max-width: 602px) {
+@media (max-width: 720px) {
     h1 {
-        display: none;
+        font-size: 2rem;
+    }
+    main {
+        height: 100%;
+    }
+    #input {
+        width: 80%;
+        margin-top: 0;
+    }
+    #output {
+        width: 80%;
     }
 }
