--- a/style.css
+++ b/style.css
@@ -118,13 +118,19 @@ h2 {
         font-size: 16px;
         text-align: center;
     }
+    #startseite-button {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
 }
 @media (max-width: 768px) {
 }
 @media (max-width: 992px) {
     #startseite-button {
-        background-color: green;
         width: 100%;
+        display: flex;
+        justify-content: center;
     }
     #startseite-text {
         text-align: center;
