added kanban project

--- a/Projects/CurrencyConverter/style.css
+++ b/Projects/CurrencyConverter/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(40, 40, 40);
+    background-color: rgba(39, 38, 38, 0.931);
     margin: 0;
     font-family: "Roboto", sans-serif;
     color: white;
