--- a/Projects/Calculator/style.css
+++ b/Projects/Calculator/style.css
@@ -45,3 +45,20 @@ td:hover {
 .highlight {
     background-color: rgb(40, 40, 40);
 }
+
+#website-button {   
+    position: absolute;
+    left: 0;
+    top: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
+}
