--- a/Projects/CurrencyConverter/style.css
+++ b/Projects/CurrencyConverter/style.css
@@ -77,3 +77,19 @@ button {
     justify-content: center;
     gap: 10px;
 }
+
+#website-button {   
+    left: 0;
+    bottom: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
+}
