--- a/Projects/HotelReservation/style.css
+++ b/Projects/HotelReservation/style.css
@@ -76,3 +76,20 @@ select {
     text-align: center;
     margin-top: 1em;
 }
+
+#website-button {   
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
+}
