--- a/Projects/InterestCalculator/style.css
+++ b/Projects/InterestCalculator/style.css
@@ -64,3 +64,20 @@ td, th, tr {
     border-radius: 5px;
     color: white;
 }
+
+#website-button {   
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
+}
