--- a/Projects/PrintingCostComparision/style.css
+++ b/Projects/PrintingCostComparision/style.css
@@ -121,3 +121,20 @@ td, th {
         display: none;
     }
 }
+
+#website-button {   
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
+}
