--- a/Projects/ShoppingList/app.css
+++ b/Projects/ShoppingList/app.css
@@ -6,7 +6,7 @@ body {
     font-weight: 400;
     font-size: 1.5rem;
     font-style: normal;
-    font-letiation-settings:
+    font-variation-settings:
     "wdth" 100;
 }
 
@@ -55,7 +55,7 @@ input {
 }
 
 li:hover {
-     1ration: line-through;
+    text-decoration: line-through;
     cursor: default;
 }
 
@@ -87,4 +87,21 @@ h2 {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+}
+
+#website-button {   
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 1em;
+
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
 }
