--- a/Projects/TeslaWebsite/TeslaHomepage/style-homepage.css
+++ b/Projects/TeslaWebsite/TeslaHomepage/style-homepage.css
@@ -24,6 +24,7 @@ html, body {
     width: 100%;
     height: 100vh;
     object-fit: contain;
+    z-index: -5;
 }
 
 .topBar{
@@ -95,13 +96,23 @@ html, body {
 
 .story a {
     color: rgb(255, 255, 255);
-     1ration: underline;
+    text-decoration: underline;
 }
 
-@media screen and (max-width: 800px) {
+#website-button {   
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    margin: 3em;
+    z-index: 5;
 
-}
-
-@media screen and (max-width: 1300px) {
-
+    a {
+        text-decoration: none;
+        color: white;
+        font-size: 18px;
+        background-color: #0d6efd;
+        border-radius: 5px;
+        font-weight: bold;
+        padding: 0.3em 1.5em;
+    }
 }
